ui/src/components/App/App.scss
@import '../../../node_modules/react-md/src/scss/react-md';
@import '../../../node_modules/react-md/dist/react-md.indigo-pink.min.css';

$md-primary-color: $md-indigo-500 !default;
$md-secondary-color: $md-pink-a-200 !default;

.md-avatar--color {
  background: $md-primary-color !important;
  color: #fff !important;
}

.user-balance {
  width: 240px;
}

.pad-left {
  padding-left: 10px;
}

@media (max-width: 840px) { 
  #app-title {
    font-size: medium !important;
  }
}

@media (max-width: 840px) { 
  .userbadge-desk-view {
    display: none !important;
  }

  .userbadge-mobile-view {
    display: flex !important;
  }
}

@media (min-width: 840px) { 
  .mobile-sidebar-menu {
    display: none !important;
  }
}

@media (max-width: 840px) { 
  .project-title {
    display: flex;
    align-items: center;
  }

  .project-title h2 {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    min-width: 50px;
    max-width: 30%;
  }

  .project-title .state-chip {
    margin-left: 10px;
    margin-top: 0px;
  }
}

@media (max-width: 400px) { 
  .project-title h2 {
    max-width: 30%;
  }
}

@media (min-width: 840px) { 
  .userbadge-desk-view {
    display: flex !important;
  }

  .userbadge-mobile-view {
    display: none !important;
  }
}

@include react-md-everything;

